--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 </div>
 <footer>
-	<p>&copy; 2023 <a href="https://github.com/M3M397">Muhammad Bazil(M3M)</a> - Age Calculator</p>
+	<p>&copy; 2023 <a href="https://github.com/M3M397">Muhammad Bazil(M3M)</a> - To-Do List</p>
 </footer>
 </div>
 <script src="script.js"></script>
